@@ -13,7 +13,7 @@ JSON::MaybeXS     = 1.002002
 Module::Pluggable = 5.1
 Module::Runtime   = 0.014
 Moo               = 1.006
-MooX::ClassStash  = 0.005
+Subclass::Of      = 0.003
 Try::Tiny         = 0.22
 Type::Tiny        = 1.000002
 Unexpected        = v0.35.0
